corpus/c/syntax/case-09/snapshots/gcc9_12/native_text_capture/render.debug.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [syntax] syntax error @ src/main.c:2:10
help: fix the first parser error at the user-owned location
want: )
near: { token
| src/main.c:2:10
|     if (1 {
|          ^
raw:
  src/main.c:2:10: error: expected ')' before '{' token
  src/main.c: In function 'main':
      2 |     if (1 {
        |        ~ ^~
        |          )
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
debug-facts: group_ref=group-7fd4f877b5aa, role=independent_root, visibility_floor=never_hidden, episode_ref=episode-a41e1a468d2a
debug-facts: evidence_tags=actionability_short, early_invocation, strong_root_family, user_owned_primary
debug-raw: provenance_capture_refs=stderr.raw

error: [syntax] syntax error @ src/main.c:5:1
help: fix the first parser error at the user-owned location
want: expression
near: } token
| src/main.c:5:1
| }
| ^
raw:
  src/main.c:5:1: error: expected expression before '}' token
      5 | }
        | ^
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
debug-facts: group_ref=group-acc4d5d3731f, role=independent_root, visibility_floor=never_hidden, episode_ref=episode-6ba56010e8cf
debug-facts: evidence_tags=actionability_short, early_invocation, strong_root_family, user_owned_primary
debug-raw: provenance_capture_refs=stderr.raw
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output